# moc-forms

./: Dockerfile  README.md  README.rst  app.py  docker-compose.yml  requirements.txt  setup.cfg
moc_forms/: adjutant.py  app.py  config.py  exceptions.py  oidc.py
moc_forms/templates/: signup.html  success.html
templates/: signup.html
