[metadata]
name = moc-forms
summary = Forms for MOC
description-file =
    README.rst
author = MOC
author-email = team@lists.massopen.cloud
home-page = https://massopen.cloud
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    moc_forms
    moc_forms.templates

[entry_points]
oslo.config.opts =
    moc_forms = moc_forms.config:list_opts

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = moc_forms/locale
domain = moc_forms

[update_catalog]
domain = moc_forms
output_dir = moc_forms/locale
input_file = moc_forms/locale/moc_forms.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = moc_forms/locale/moc_forms.pot